--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,10 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Inicio</string>
-    <string name="menu_slideFin">Pedidos</string>
     <string name="menu_gallery">Entregas</string>
-    <string name="menu_slideshow">Extras</string>
-    <string name="menu_slideCob">Cobranza</string>
+    <string name="menu_slideshow">Pedidos Pendientes</string>
+    <string name="menu_slideFin">Terminados</string>
+    <string name="menu_slideCob">Reportar un problema</string>
     <string name="title_activity_ubica_mapa">Map</string>
     <string name="title_activity_mapas">Map</string>
     <string name="title_activity_maps">Map</string>
